начало соединенеи сброса пароля + notification пришёл к выводу что notification должен быть на каждую отправку -> то есть каждая новая запись
